fixato npm check

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "webpack-dev-server --inline --host 0.0.0.0",
     "deploy": "NODE_ENV=production webpack -p && npm shrinkwrap",
     "test": "babel-node test/tests.js",
-    "check": "npm-check -u",
+    "check": "npm-check -s",
     "json-server": "json-server --watch db.json",
     "lint": "eslint app --ext .js, .jsx || true"
   },
