--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "normalize-css": "^2.3.1",
     "react": "^0.13.3",
     "react-bootstrap": "^0.24.2",
+    "react-dnd": "^1.1.4",
     "react-router": "^0.13.3"
   }
 }
