--- a/package.json
+++ b/package.json
@@ -15,32 +15,33 @@
     "lint": "eslint app --ext .js, .jsx || true"
   },
   "devDependencies": {
-    "babel": "^5.6.14",
-    "babel-core": "^5.6.15",
-    "babel-eslint": "^3.1.20",
+    "babel": "^5.8.23",
+    "babel-core": "^5.8.23",
+    "babel-eslint": "^4.1.1",
     "babel-loader": "^5.2.2",
-    "css-loader": "^0.15.1",
-    "eslint": "^0.24.0",
-    "eslint-loader": "^0.14.1",
-    "eslint-plugin-react": "^2.6.3",
+    "css-loader": "^0.16.0",
+    "eslint": "^1.3.1",
+    "eslint-loader": "^1.0.0",
+    "eslint-plugin-react": "^3.3.1",
     "file-loader": "^0.8.4",
-    "jsdom": "^5.5.0",
-    "json-server": "^0.7.17",
+    "jsdom": "^6.3.0",
+    "json-server": "^0.7.26",
     "node-libs-browser": "^0.5.2",
-    "npm-check": "^3.2.10",
+    "npm-check": "^4.0.1",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
-    "webpack": "^1.10.0",
+    "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
     "axios": "^0.5.4",
     "bootstrap": "^3.3.5",
-    "flux": "^2.0.3",
+    "flux": "^2.1.1",
     "keymirror": "^0.1.1",
     "normalize-css": "^2.3.1",
     "react": "^0.13.3",
-    "react-bootstrap": "^0.24.2",
+    "react-bootstrap": "^0.25.1",
+    "react-dnd": "^1.1.5",
     "react-router": "^0.13.3"
   }
 }
