--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "parser": "babel-eslint",
   "plugins": [
-    "react"
+    "react",
+    "objects"
   ],
   "env": {
     "browser": true,
@@ -54,7 +55,7 @@
 
     "comma-dangle": [2, "never"],
     "no-cond-assign": [2, "always"],
-    "no-console": 1,
+    "no-console": 0,
     "no-debugger": 1,
     "no-alert": 1,
     "no-constant-condition": 1,
