--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "css-loader": "^0.16.0",
     "eslint": "^1.3.1",
     "eslint-loader": "^1.0.0",
+    "eslint-plugin-objects": "^1.1.1",
     "eslint-plugin-react": "^3.3.1",
     "file-loader": "^0.8.4",
     "jsdom": "^6.3.0",
